0.02
 - Add SEE ALSO section to doc.
 - Regen README file.
 - Sort module usage in EXAMPLES in doc.
 - Update copyright years.

0.01 2024-05-27T20:21:38+02:00
 - First version.