@@ -32,6 +32,7 @@ requires:
   DateTime: 0
   Mo: 0
   Mo::utils: 0.28
+  Mo::utils::Array: 0
   Readonly: 0
   perl: 5.8.0
 resources:
