@@ -87,13 +87,6 @@ METHODS
 
 ERRORS
      new():
-             From Mo::utils::check_array_object():
-                     Parameter 'comments' must be a array.
-                             Value: %s
-                             Reference: %s
-                     Comment isn't 'Data::Message::Board::Comment' object.
-                             Value: %s
-                             Reference: %s
              From Mo::utils::check_isa():
                      Parameter 'author' must be a 'Data::Person' object.
                              Value: %s
@@ -101,16 +94,27 @@ ERRORS
                      Parameter 'date' must be a 'DateTime' object.
                              Value: %s
                              Reference: %s
+
              From Mo::utils::check_length():
                      Parameter 'message' has length greater than '4096'.
                              Value: %s
+
              From Mo::utils::check_number_id():
                      Parameter 'id' must be a natural number.
                              Value: %s
+
              From Mo::utils::check_required():
                      Parameter 'author' is required.
                      Parameter 'date' is required.
                      Parameter 'message' is required.
+
+             From Mo::utils::Array::check_array_object():
+                     Parameter 'comments' must be a array.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'comments' with array must contain 'Data::Message::Board::Comment' objects.
+                             Value: %s
+                             Reference: %s
 
 EXAMPLE
      use strict;
@@ -188,7 +192,7 @@ EXAMPLE
      #
 
 DEPENDENCIES
-    Mo, Mo::utils.
+    Mo, Mo::utils, Mo::utils::Array.
 
 SEE ALSO
     Tags::HTML::Message::Board
