@@ -4,8 +4,8 @@ use strict;
 use warnings;
 
 use Mo qw(build default is);
-use Mo::utils 0.28 qw(check_array_object check_isa check_length check_number_id
-	check_required);
+use Mo::utils 0.28 qw(check_isa check_length check_number_id check_required);
+use Mo::utils::Array qw(check_array_object);
 
 our $VERSION = 0.02;
 
@@ -38,7 +38,7 @@ sub BUILD {
 	check_isa($self, 'author', 'Data::Person');
 
 	# Check comments.
-	check_array_object($self, 'comments', 'Data::Message::Board::Comment', 'Comment');
+	check_array_object($self, 'comments', 'Data::Message::Board::Comment');
 
 	# Check date.
 	check_required($self, 'date');
@@ -164,13 +164,6 @@ Returns string.
 =head1 ERRORS
 
  new():
-         From Mo::utils::check_array_object():
-                 Parameter 'comments' must be a array.
-                         Value: %s
-                         Reference: %s
-                 Comment isn't 'Data::Message::Board::Comment' object.
-                         Value: %s
-                         Reference: %s
          From Mo::utils::check_isa():
                  Parameter 'author' must be a 'Data::Person' object.
                          Value: %s
@@ -178,16 +171,28 @@ Returns string.
                  Parameter 'date' must be a 'DateTime' object.
                          Value: %s
                          Reference: %s
+
          From Mo::utils::check_length():
                  Parameter 'message' has length greater than '4096'.
                          Value: %s
+
          From Mo::utils::check_number_id():
                  Parameter 'id' must be a natural number.
                          Value: %s
+
          From Mo::utils::check_required():
                  Parameter 'author' is required.
                  Parameter 'date' is required.
                  Parameter 'message' is required.
+
+         From Mo::utils::Array::check_array_object():
+                 Parameter 'comments' must be a array.
+                         Value: %s
+                         Reference: %s
+                 Parameter 'comments' with array must contain 'Data::Message::Board::Comment' objects.
+                         Value: %s
+                         Reference: %s
+
 
 =head1 EXAMPLE
 
@@ -270,7 +275,8 @@ Returns string.
 =head1 DEPENDENCIES
 
 L<Mo>,
-L<Mo::utils>.
+L<Mo::utils>,
+L<Mo::utils::Array>.
 
 =head1 SEE ALSO
 
