@@ -1,5 +1,6 @@
 0.02
  - Add SEE ALSO section to doc.
+ - Move check_array_object() to Mo::utils::Array.
  - Regen README file.
  - Sort module usage in EXAMPLES in doc.
  - Update copyright years.
